@@ -232,7 +232,7 @@ grub_ieee1275_instance_to_path (grub_ieee1275_ihandle_t ihandle,
 }
 
 int
-grub_ieee1275_write (grub_ieee1275_ihandle_t ihandle, void *buffer,
+grub_ieee1275_write (grub_ieee1275_ihandle_t ihandle, const void *buffer,
 		     grub_size_t len, grub_ssize_t *actualp)
 {
   struct write_args
